--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:dev": "firebase use dev && ng build --aot && firebase deploy --only hosting",
+    "deploy:prod": "firebase use prod && ng build --prod && firebase deploy --only hosting",
+    "deploy": "ng build --prod && firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
