--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "bootstrap": "^4.5.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
